tests/e2e/not_allowed/service.error
Error: syntax error in story at line 1, column 1

1|    service = 1
      ^^^^^^^

E0030: `service` is reserved for future use
